--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@ title: "Inicio"
 pagination:
   enabled: true
 ---
+
 <section class="hero">
+
   <h1>{{ site.title }}</h1>
   <p>{{ site.description }}</p>
 </section>
@@ -28,5 +30,5 @@ pagination:
 
 
 </section>
+<script src="{{ '/assets/js/matrix-dash-con.js' | relative_url }}"></script>
 
-{% include pagination.html %}
