--- a/write-ups.html
+++ b/write-ups.html
@@ -18,4 +18,5 @@ pagination:
 </section>
 
 {% include pagination.html %}
+<script src="{{ '/assets/js/matrix-dash-con-w.js' | relative_url }}"></script>
 
