--- a/404.html
+++ b/404.html
@@ -23,3 +23,5 @@ layout: page
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
 </div>
+<script src="{{ '/assets/js/matrix-dash-con.js' | relative_url }}"></script>
+
