deploy: 756554ce8a51406645b5dc2661953f8afd234f34

--- a/404.html
+++ b/404.html
@@ -66,6 +66,8 @@
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
 </div>
+<script src="/assets/js/matrix-dash-con.js"></script>
+
 
 
       </div>
