--- a/my-apps/index.html
+++ b/my-apps/index.html
@@ -56,6 +56,8 @@
 <a href="https://github.com/jekyll">jekyll</a> /
 <a href="https://github.com/jekyll/jekyll">jekyll</a></p>
 
+<script src="/assets/js/matrix-dash-con.js"></script>
+
 
 
       </div>
