--- a/index.html
+++ b/index.html
@@ -7,28 +7,23 @@ pagination:
 
 <section class="hero">
 
-  <h1>{{ site.title }}</h1>
+<img src="{{ site.dash.avatar_path | relative_url }}" alt="{{ site.author.name }}" class="author-avatar">
   <p>{{ site.description }}</p>
 </section>
 
-</section>
+
 
 <section class="home-blocks">
-  <div class="block">
-    <h2><a href="/write-ups/">Write Ups</a></h2>
-    <p>Aquí irán los artículos y write ups más recientes.</p>
+  <div class="gif-container">
+    <img src="/assets/images/logos/31d6f25ee822903b0ebd78ddea9e0b99.gif" alt="GIF central" class="gif-center">
+
+    <!-- Botones -->
+    <a href="/write-ups/" class="gif-button btn-top-left">Write Ups</a>
+    <a href="/my-apps/" class="gif-button btn-top-right">My Apps</a>
+    <a href="/about/" class="gif-button btn-bottom-center">About</a>
   </div>
-
-  <div class="block">
-    <h2><a href="/my-apps/">My Apps</a></h2>
-    <p>Explora las aplicaciones y proyectos que he desarrollado.</p>
-  <div class="block">
-
-    <h2><a href="/about/">About</a></h2>
-    <p>About me.</p>
-  </div>
-
-
 </section>
+
 <script src="{{ '/assets/js/matrix-dash-con.js' | relative_url }}"></script>
+<link rel="stylesheet" href="{{ '/assets/css/index.css' | relative_url }}">
 
