deploy: 4a077a8e933ee82bd199c7a4813010126bb78044

--- a/my-apps/index.html
+++ b/my-apps/index.html
@@ -8,8 +8,8 @@
 <meta property="og:title" content="my-apps" />
 <meta name="author" content="GitHub User" />
 <meta property="og:locale" content="en_US" />
-<meta name="description" content="This is my blog, here you will find more information about me, in addition to my work on HackTheBox and some interesting apps i’ve developed" />
-<meta property="og:description" content="This is my blog, here you will find more information about me, in addition to my work on HackTheBox and some interesting apps i’ve developed" />
+<meta name="description" content="This is my blog, here you will find more information about me, as well as my work on HackTheBox and some interesting apps i’ve developed." />
+<meta property="og:description" content="This is my blog, here you will find more information about me, as well as my work on HackTheBox and some interesting apps i’ve developed." />
 <link rel="canonical" href="https://your-site-url/my-apps/" />
 <meta property="og:url" content="https://your-site-url/my-apps/" />
 <meta property="og:site_name" content="Pwn3d777" />
@@ -17,7 +17,7 @@
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="my-apps" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebPage","author":{"@type":"Person","name":"GitHub User"},"description":"This is my blog, here you will find more information about me, in addition to my work on HackTheBox and some interesting apps i’ve developed","headline":"my-apps","url":"https://your-site-url/my-apps/"}</script>
+{"@context":"https://schema.org","@type":"WebPage","author":{"@type":"Person","name":"GitHub User"},"description":"This is my blog, here you will find more information about me, as well as my work on HackTheBox and some interesting apps i’ve developed.","headline":"my-apps","url":"https://your-site-url/my-apps/"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css">
   <link rel="icon" type="image/png" href="/assets/favicon.png" />
