--- a/write-ups/page4/index.html
+++ b/write-ups/page4/index.html
@@ -8,8 +8,8 @@
 <meta property="og:title" content="Inicio" />
 <meta name="author" content="GitHub User" />
 <meta property="og:locale" content="en_US" />
-<meta name="description" content="This is my blog, here you will find more information about me, in addition to my work on HackTheBox and some interesting apps i’ve developed" />
-<meta property="og:description" content="This is my blog, here you will find more information about me, in addition to my work on HackTheBox and some interesting apps i’ve developed" />
+<meta name="description" content="This is my blog, here you will find more information about me, as well as my work on HackTheBox and some interesting apps i’ve developed." />
+<meta property="og:description" content="This is my blog, here you will find more information about me, as well as my work on HackTheBox and some interesting apps i’ve developed." />
 <link rel="canonical" href="https://your-site-url/write-ups/page4/" />
 <meta property="og:url" content="https://your-site-url/write-ups/page4/" />
 <meta property="og:site_name" content="Pwn3d777" />
@@ -19,7 +19,7 @@
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Inicio" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebPage","author":{"@type":"Person","name":"GitHub User"},"description":"This is my blog, here you will find more information about me, in addition to my work on HackTheBox and some interesting apps i’ve developed","headline":"Inicio","url":"https://your-site-url/write-ups/page4/"}</script>
+{"@context":"https://schema.org","@type":"WebPage","author":{"@type":"Person","name":"GitHub User"},"description":"This is my blog, here you will find more information about me, as well as my work on HackTheBox and some interesting apps i’ve developed.","headline":"Inicio","url":"https://your-site-url/write-ups/page4/"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css">
   <link rel="icon" type="image/png" href="/assets/favicon.png" />
@@ -50,31 +50,26 @@
       <div class="wrapper">
         <section class="hero">
 
-  <h1>Pwn3d777</h1>
-  <p>This is my blog, here you will find more information about me, in addition to my work on HackTheBox and some interesting apps i've developed
+<img src="/assets/images/logos/Icon_hacker.png" alt="" class="author-avatar">
+  <p>This is my blog, here you will find more information about me, as well as my work on HackTheBox and some interesting apps i've developed.
 </p>
 </section>
 
-</section>
+
 
 <section class="home-blocks">
-  <div class="block">
-    <h2><a href="/write-ups/">Write Ups</a></h2>
-    <p>Aquí irán los artículos y write ups más recientes.</p>
+  <div class="gif-container">
+    <img src="/assets/images/logos/31d6f25ee822903b0ebd78ddea9e0b99.gif" alt="GIF central" class="gif-center">
+
+    <!-- Botones -->
+    <a href="/write-ups/" class="gif-button btn-top-left">Write Ups</a>
+    <a href="/my-apps/" class="gif-button btn-top-right">My Apps</a>
+    <a href="/about/" class="gif-button btn-bottom-center">About</a>
   </div>
-
-  <div class="block">
-    <h2><a href="/my-apps/">My Apps</a></h2>
-    <p>Explora las aplicaciones y proyectos que he desarrollado.</p>
-  <div class="block">
-
-    <h2><a href="/about/">About</a></h2>
-    <p>About me.</p>
-  </div>
-
-
 </section>
+
 <script src="/assets/js/matrix-dash-con.js"></script>
+<link rel="stylesheet" href="/assets/css/index.css">
 
 
       </div>
